Formating and Logo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Hi, I'm Diego
-subtitle: data Scientist | Artificial Intelligence
+subtitle: Data Scientist | Artificial Intelligence
 ---
