--- a/index.html
+++ b/index.html
@@ -3,3 +3,5 @@ layout: home
 title: Hi, I'm Diego
 subtitle: Data Scientist | Artificial Intelligence
 ---
+
+<a href="./assets/Resume_2023.pdf" download>Download Resume</a>
