--- a/index.html
+++ b/index.html
@@ -4,4 +4,18 @@ title: Hi, I'm Diego
 subtitle: Data Scientist | Artificial Intelligence
 ---
 
-<a href="./assets/Resume_2023.pdf" download>Download Resume</a>
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>The a download attribute</h1>
+
+<p>Click on the image to download it:<p>
+<a href="./assets/Resume_2023.pdf" download="Resume">Download link</a>
+  <img src="/assets/img/hello_world.jpeg" width="104" height="142">
+</a>
+
+<p><b>Note:</b> The download attribute is not supported in IE or Edge (prior version 18), or in Safari (prior version 10.1).</p>
+
+</body>
+</html>
